[tool.poetry]
name = "playground"
version = "0.0.1"
description = ""
authors = ["andrtell"]
readme = "README.md"
packages = [{ include = "ds", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.112.2"
ruff = "^0.6.8"
mypy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.6"

[build-system]
required = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
src = ["src"]
target-version = "py312"

[tool.mypy]
exclude = ["build/", "dist/"]
warn_unused_ignores = true
